--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
    <head>
@@ -13,12 +12,14 @@
          <header>
             <p id="mainHeading"> HANNAH MUNGAMURI</p><br>
       <p1>   9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735</p1><br>
-      <p1> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com.com<br>
+      <p1> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
         &nbsp MO-63126
      </p1>
       
     </header>
-    <!-- This page, edited on 7:35 PM 9/24/2022 has 
+    <!-- THis page edited on 8:53 PM 11/13/2025 to add Belize,Mexico volunteer services. 
+
+This page, edited on 7:35 PM 9/24/2022 has 
      additional feature of "back to top" navigation
 
 	<a class="skip-to-content-link" href="#main">
@@ -249,6 +250,21 @@ Volunteered for rural adult education program<br>
 TJPS college Pattabhipuram Rd,Guntur,AP,India-52206<br>
 Dr.Swanalatha   Ph:011 91 939 785 5575<br><br>
 
+<b>Short term eye glass clinic mission trip to Belize (2019)</b><br>
+Volunteered to help a short term eye glass clinic and mission trip to Belize <br>
+with our neighborhood church . Taught Physics in a Belize high school and <br>assisted 
+a physician to help provide eye glasses to patients . <br>
+<br> Team director :Mrs.Kathy Odegard <br><br>
+
+
+<b>Short term mission trip to Mexico - with Casa por Christos (2022 Dec)</b><br>
+Volunteered to help a short term house construction trip and mission trip to Mexico <br>
+with our neighborhood church .Helped build a small house for a young
+widowed Mexican lady <br>with 3 small children. Made valuable rapport and connections 
+that had <br> given me an extra ordinary insight into various cultural life styles.<br>
+<br>
+<br><br>
+
  <a style="font-size:24px;"  href="#contents" > Back to top of the page.</a> <br>
 
 </p>
@@ -265,8 +281,7 @@ Dr.Swanalatha   Ph:011 91 939 785 5575<br><br>
  <b>==> I was born in South India and can speak Telugu language too.</b><br>    
 <b>==> Iam an aspiring fiction writer and I have done,
  "in-person" research
-in various sectors, including  but not limited to warehouse work,
-insurance sales,short time Christian missionary work
+in various sectors, including <br> &nbsp &nbsp &nbsp &nbsp but not limited to world vision management , education sector, short time Christian missionary <br> &nbsp &nbsp &nbsp &nbspwork
  in India,Nepal,Belize &USA.</b><br>
 <b>==> I was awarded the 'Best lady speaker ' award by Jaycees in 1991.
 </b><br>
