--- a/index.html
+++ b/index.html
@@ -76,6 +76,24 @@ Ph: 314-458-8496
               </p>
 <p>
 
+<b> Substitute  pre school teacher at guidepost Montessori</b><br>
+(2023 sep todate <br>
+10555 Bigbend rd,    <br>               
+St Louis,MO 63122<br>
+<b><em>Supervisor: </em></b> Ms.Jill Buzzell<br>
+Ph:314-827-7660<br><br>
+</p>
+
+			<p>
+	<b> Substitute  pre school teacher at KinderCare Kirkwood</b><br>
+(2021 aug todate <br>
+341 S Kirkwood rd,   <br>               
+ Kirkwood, MO - 63122<br>
+<b><em>Supervisor: </em></b> Ms.Julie Johnson<br>
+Ph: 314-574-1452<br><br>
+			</p>
+
+			<!--
 <b>Lead pre school teacher at Legacy Academy</b><br>
 (2022 July to 2022 Aug - summer job<br>
  5558 Suwanee Dam Rd,    <br>               
@@ -83,6 +101,9 @@ Ph: 314-458-8496
 <b><em>Supervisor: </em></b> Ms.Lynn<br>
 Ph:678-546-7255<br><br>
 
+	
+
+	--->
 <b>Math instructor / grader KUMON </b><br>
 (2012-2018)              <br>       
   3930 Old Hwy 94S Ste #47  <br>
