--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Ph: 314-458-8496
 <p>
 
 <b> Substitute  pre school teacher at guidepost Montessori</b><br>
-(2023 sep todate <br>
+(2023 sep todate - still employed  ) <br>
 10555 Bigbend rd,    <br>               
 St Louis,MO 63122<br>
 <b><em>Supervisor: </em></b> Ms.Jill Buzzell<br>
@@ -86,7 +86,7 @@ Ph:314-827-7660<br><br>
 
 			<p>
 	<b> Substitute  pre school teacher at KinderCare Kirkwood</b><br>
-(2021 aug todate <br>
+(2021 aug todate - still employed ) <br>
 341 S Kirkwood rd,   <br>               
  Kirkwood, MO - 63122<br>
 <b><em>Supervisor: </em></b> Ms.Julie Johnson<br>
@@ -104,6 +104,7 @@ Ph:678-546-7255<br><br>
 	
 
 	--->
+			<p> 
 <b>Math instructor / grader KUMON </b><br>
 (2012-2018)              <br>       
   3930 Old Hwy 94S Ste #47  <br>
