--- a/index.html
+++ b/index.html
@@ -112,6 +112,20 @@ Ph:678-546-7255<br><br>
 <b><em>Supervisor: </em> </b>Ms.Pav Saluja <br>
 Ph :636 675 4961 <br>
 <br>
+			</p>
+
+						<p> 
+<b> Lecturer in Electronics </b><br>
+(1995 - 1996)              <br>       
+TJPS college,  Pattabhipuram Road, <br>
+opposite Jute Mill, Rajarajeswaripuram,<br>
+Pattabhipuram, Guntur, <br>
+Andhra Pradesh 522006, India <br>
+
+<b><em>Supervisor: </em> </b> Dr.AVNaga Raja GUpta garu <br>
+Ph : 011 91 863 223 0852 <br>
+<br>
+			</p>
  <a style="font-size:24px;"  href="#contents" > Back to top of the page.</a> <br>
 
 </p>
