--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ opposite Jute Mill, Rajarajeswaripuram,<br>
 Pattabhipuram, Guntur, <br>
 Andhra Pradesh 522006, India <br>
 
-<b><em>Supervisor: </em> </b> Dr.AVNaga Raja GUpta garu <br>
+<b><em>Supervisor: </em> </b> Dr.A.V.Naga Raja Gupta garu <br>
 Ph : 011 91 863 223 0852 <br>
 <br>
 			</p>
