--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <article>
          <header>
             <p id="mainHeading"> HANNAH MUNGAMURI</p><br>
-      <p1><b>    9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735</p1><br>
-      <p1> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
+      <p1><b>    9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735 </b> </p1><br>
+      <p1> <b> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
         &nbsp MO-63126</b>
      </p1>
       
