--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <article>
          <header>
             <p id="mainHeading"> HANNAH MUNGAMURI</p><br>
-    <h1><b>    9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735 </b> </h1><br>
-    <h1><b> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
-        &nbsp MO-63126</b></h1> <br>
-	<h1> <b> Personal WEB PAGE created by myself : https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></h1>
+    <p1 style="font-size: 24px;"><b>    9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735 </b> </p1><br>
+    <p1><b> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
+        &nbsp MO-63126</b></p1> <br>
+	<p1> <b> Personal WEB PAGE created by myself : https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></p1>
       
     </header>
     <!-- THis page edited on 8:53 PM 11/13/2025 to add Belize,Mexico volunteer services. 
