--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p1 style="font-size: 24px;"><b>    9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735 </b> <br>
     <b> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
         &nbsp MO-63126</b> <br>
-	 <b> Personal WEB PAGE created by myself :<br> https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></p1>
+	 <b> Personal WEB PAGE created by myself :</b><br> <b> https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></p1>
 
 
 <!-- 
