--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		9108 Pennant Ln,    &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp     Phone : 314-397-3735 </b> <br>
         <b> Saint Louis,  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp &nbsp &nbsp  Email :casay2023apr@aol.com<br>
         &nbsp MO-63126</b> <br>
-	    <p style="font-color: rgb(250,120,10);"><b> Personal WEB PAGE created by myself :</b></p><br>
-			 <p><b> https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></p>
+	    <p style="font-color: rgb(250,120,10);"><b> Personal WEB PAGE created by myself :</b><br>
+			 <b> https://hannah2020m.github.io/HMungamuriResumeBrief2025Nov/</b></p>
 	</p1>
 
 
